Add a place holder for more data

--- a/ratmal.html
+++ b/ratmal.html
@@ -23,6 +23,17 @@
           "leistungen" : "Die Räuber, Philosophie der Physiologie, Über Anmut und Würde, Was heißt und zu welchem Ende studiert man Universalgeschichte?",
           "wikiseite" : "http://de.wikipedia.org/wiki/Schiller"
         },
+/*
+        {
+          "name" : "",
+          "bild" : "",
+          "fächer" : "",
+          "zeit" : "",
+          "arbeitsLand" : "",
+          "leistungen" : "",
+          "wikiseite" : ""
+        },
+*/
       ];
 
       function neuerRätsel(){
