Put controls in the center

--- a/ratmal.html
+++ b/ratmal.html
@@ -72,7 +72,7 @@
         color: blue;
       }
       .controls {
-        float: right;
+        text-align: center;
       }
     </style>
   </head>
