Add Eric Kandel

--- a/ratmal.html
+++ b/ratmal.html
@@ -23,6 +23,15 @@
           "leistungen" : "Die Räuber, Philosophie der Physiologie, Über Anmut und Würde, Was heißt und zu welchem Ende studiert man Universalgeschichte?",
           "wikiseite" : "http://de.wikipedia.org/wiki/Schiller"
         },
+        {
+          "name" : "Eric Kandel",
+          "bild" : "http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Eric_Kandel_by_aquaris3.jpg/220px-Eric_Kandel_by_aquaris3.jpg",
+          "fächer" : "Neurowissenschaft",
+          "zeit" : "1929-",
+          "arbeitsLand" : "USA",
+          "leistungen" : "Entdeckungen zur Signalübertragung im Nervensystem (Nobel Preis Jahr 2000), Gedächtnisforschung",
+          "wikiseite" : "http://de.wikipedia.org/wiki/Eric_Kandel"
+        },
 /*
         {
           "name" : "",
