Use jquery from CDN rather than locally

--- a/ratmal.html
+++ b/ratmal.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="jquery-2.0.3.js"></script>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script type="text/javascript">
       var i=0;
       var data = [
@@ -24,6 +24,15 @@
           "wikiseite" : "http://de.wikipedia.org/wiki/Schiller"
         },
         {
+          "name" : "Emmy Noether",
+          "bild" : "http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Noether.jpg/220px-Noether.jpg",
+          "fächer" : "Mathematik, Physik",
+          "zeit" : "1882-1935",
+          "arbeitsLand" : "Deutschland",
+          "leistungen" : "die Theorie der Ringe, Körper und Algebren revolutioniert; Noether-Theorem;  zweite Deutsche, die an einer deutschen Universität in Mathematik promoviert wurde",
+          "wikiseite" : "http://de.wikipedia.org/wiki/Emmy_Noether"
+        },
+        {
           "name" : "Eric Kandel",
           "bild" : "http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Eric_Kandel_by_aquaris3.jpg/220px-Eric_Kandel_by_aquaris3.jpg",
           "fächer" : "Neurowissenschaft",
@@ -32,7 +41,7 @@
           "leistungen" : "Entdeckungen zur Signalübertragung im Nervensystem (Nobel Preis Jahr 2000), Gedächtnisforschung",
           "wikiseite" : "http://de.wikipedia.org/wiki/Eric_Kandel"
         },
-/*
+        /*
         {
           "name" : "",
           "bild" : "",
