--- a/ratmal.html
+++ b/ratmal.html
@@ -86,6 +86,9 @@
       .bio {
         text-align: center;
       }
+      .info {
+        text-align: right;
+      }
       .antwort {
         color: blue;
       }
@@ -95,6 +98,9 @@
     </style>
   </head>
   <body>
+    <div class=info>
+      <a href="about.html">About</a>
+    </div>
     <div class=bio>
       <h3 id=name></h3>
       <a id=wikiseite href="" target="_blank"><img id=bild src=""/></a>
