Add repo to about

--- a/about.html
+++ b/about.html
@@ -3,5 +3,7 @@
   </head>
   <body>
     Gebastelt beim JugendHackt, inspiriert von <a href="https://twitter.com/Franz_Ki">@Franz_Ki</a>!
+
+    Contribute here: https://github.com/starkcoffee/ratmal
   </body>
 </html>
