Add more info to about

--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
   <head>
   </head>
   <body>
-    Gebastelt beim JugendHackt, inspiriert von <a href="https://twitter.com/Franz_Ki">@Franz_Ki</a>!
-
-    Contribute here: https://github.com/starkcoffee/ratmal
+    Gebastelt beim <a href="http://jugendhackt.de/">JugendHackt</a>, inspiriert von <a href="https://twitter.com/Franz_Ki">@Franz_Ki</a>!
+    <br>
+    Contribute here: <a href="https://github.com/starkcoffee/ratmal">http://starkcoffee.github.io/ratmal</a>
   </body>
 </html>
